--- a/products.html
+++ b/products.html
@@ -16,7 +16,7 @@
     <nav class="container ptb-16 d-flex j-between a-center">
       <ul class="d-flex a-center">
         <li class="mr-48">
-          <a href="#"><img src="/IMG/Logo.png" alt="Logo" class="" /></a>
+          <a href="#"><img src="https://github.com/Ken2011404/week2/blob/main/IMG/Logo.png" alt="Logo" class="" /></a>
         </li>
         <li class="mr-40">
           <a href="#" class="ptb-12 label_md">商品列表</a>
@@ -161,7 +161,7 @@
       <div class="container">
         <nav class="ptb-16 d-flex j-between a-center">
           <div>
-            <a href="#"><img src="/IMG/Logo.png" alt="Logo" class="" /></a>
+            <a href="#"><img src="https://github.com/Ken2011404/week2/blob/main/IMG/Logo.png" alt="Logo" class="" /></a>
           </div>
           <ul class="d-flex">
             <li class="mr-40">
