--- a/product.html
+++ b/product.html
@@ -18,7 +18,7 @@
         <li class="mr-48">
           <a href="#"
             ><img
-              src="https://github.com/Ken2011404/week2/blob/main/IMG/Logo.png"
+              src="https://github.com/Ken2011404/week2/blob/main/IMG/Logo.png?raw=true"
               alt="Logo"
               class=""
           /></a>
@@ -248,7 +248,7 @@
           <div>
             <a href="#"
               ><img
-                src="https://github.com/Ken2011404/week2/blob/main/IMG/Logo.png"
+                src="https://github.com/Ken2011404/week2/blob/main/IMG/Logo.png?raw=true"
                 alt="Logo"
                 class=""
             /></a>
